--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Game</title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="./style.css" rel="stylesheet" />
   </head>
   <body>
     <section class="city-outer">
@@ -13,12 +13,12 @@
       </audio>
       <div class="cloud"></div>
       <div class="city-inner"></div>
-      <img src="images/lights-off.png" class="car">
+      <img src="./lights-off.png" class="car">
     </section>
     <div class="game-starter">
       <h2>Your Game will start after <span id='counter'>5</span>seconds...</h2>
     </div>
     
-    <script src="js/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
